tests/should-fail/use-after-wrong-shadow.j

globals
    boolean b
endglobals

function A takes nothing returns nothing
    set b = false
endfunction

function B takes nothing returns nothing
    local real b
endfunction

function C takes nothing returns nothing
    set b = true
endfunction
